[package]
name = "raytracing"
version = "0.1.0"
authors = ["Jay Thomason <jay@covariant.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.1.0"
pixels = "0.2.0"
rand = "0.7.3"
rayon = "1.5.0"
winit = "0.23.0"
winit_input_helper = "0.8.0"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
